🪲 BUG: Fix sb-carousel overlapping slides with grid layout

--- a/src/components/display/sb-carousel/sb-carousel.css
+++ b/src/components/display/sb-carousel/sb-carousel.css
@@ -8,14 +8,16 @@
 }
 
 .track {
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  width: 100%;
   transition: transform 320ms ease;
 }
 
 ::slotted(*) {
-  flex: 0 0 100%;
-  min-width: 100%;
   box-sizing: border-box;
+  min-width: 0;
 }
 
 .control {
